--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -120,7 +120,7 @@
                         type="search"
                         name="q"
                         value=""
-                        placeholder="{{ 'general.search.search' | t }}"
+                        placeholder="Search products..."
                         {%- if settings.predictive_search_enabled -%}
                           role="combobox"
                           aria-expanded="false"
@@ -136,10 +136,11 @@
                       >
                       <label class="field__label" for="Search-In-Modal">{{ 'general.search.search' | t }}</label>
                       <input type="hidden" name="options[prefix]" value="last">
+                      <svg class="icon icon-search" aria-hidden="true" focusable="false" role="presentation">
+                        <use href="#icon-search">
+                      </svg>
                       <button class="search__button field__button" aria-label="{{ 'general.search.search' | t }}">
-                        <svg class="icon icon-search" aria-hidden="true" focusable="false" role="presentation">
-                          <use href="#icon-search">
-                        </svg>
+                        {{ 'general.search.search' | t }}
                       </button>
                     </div>
           
@@ -273,12 +274,13 @@
                 spellcheck="false"
               {%- endif -%}
             >
-            <label class="field__label" for="Search-In-Modal">{{ 'general.search.search' | t }}</label>
+            {%- comment -%}<label class="field__label" for="Search-In-Modal">{{ 'general.search.search' | t }}</label>{%- endcomment -%}
             <input type="hidden" name="options[prefix]" value="last">
+            <svg class="icon icon-search" aria-hidden="true" focusable="false" role="presentation">
+              <use href="#icon-search">
+            </svg>
             <button class="search__button field__button" aria-label="{{ 'general.search.search' | t }}">
-              <svg class="icon icon-search" aria-hidden="true" focusable="false" role="presentation">
-                <use href="#icon-search">
-              </svg>
+              {{ 'general.search.search' | t }}
             </button>
           </div>
 
@@ -505,11 +507,11 @@
             render 'icon-cart'
           endif
         -%}
-        <span class="visually-hidden">{{ 'templates.cart.cart' | t }}</span>
+        <span>{{ 'templates.cart.cart' | t }}</span>
         {%- if cart != empty -%}
           <div class="cart-count-bubble">
             {%- if cart.item_count < 100 -%}
-              <span aria-hidden="true">{{ cart.item_count }}</span>
+              <span aria-hidden="true">({{ cart.item_count }})</span>
             {%- endif -%}
             <span class="visually-hidden">{{ 'sections.header.cart_count' | t: count: cart.item_count }}</span>
           </div>
