--- a/sections/newsletter.liquid
+++ b/sections/newsletter.liquid
@@ -55,7 +55,8 @@
                     {{ 'newsletter.label' | t }}
                   </label>
                   <button type="submit" class="newsletter-form__button field__button" name="commit" id="Subscribe" aria-label="{{ 'newsletter.button_label' | t }}">
-                    {% render 'icon-arrow' %}
+                    {%- comment -%}{% render 'icon-arrow' %}{%- endcomment -%}
+                    {{ 'newsletter.button_label' | t }}
                   </button>
                 </div>
                 {%- if form.errors -%}
