--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -31,6 +31,8 @@
     {% render 'meta-tags' %}
 
     <script src="{{ 'global.js' | asset_url }}" defer="defer"></script>
+    
+    <script src="{{ 'jquery.min.js' | asset_url }}" defer="defer"></script>
     {{ content_for_header }}
 
     {%- liquid
