--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -683,6 +683,8 @@
     });
   </script>
 
+
+  <script src="{{ 'jquery.min.js' | asset_url }}"></script>
   <script>
     jQuery(document).ready(function() {
       jQuery(".product-form__submit").click(function() {
