--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -692,9 +692,16 @@
           $.getJSON('/cart.js', function(cart) {
               //console.log(cart);
 
+              var freeShippingPrice = parseFloat("{{ freeShippingPrice }}");
               var total_price = parseFloat(cart.total_price/100 );
-              console.log("total_price");
-              console.log(total_price);
+
+              if(total_price => freeShippingPrice){
+                $('.shipping-bar-bg').css('background-color', '#f15523');
+              }else{
+                $('.shipping-bar-bg').removeAttr("style")
+              }
+              //console.log("total_price");
+              //console.log(total_price);
            });
          }, 200);
       });
