--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -692,7 +692,7 @@
           $.getJSON('/cart.js', function(cart) {
               //console.log(cart);
 
-              var free_shipping_price = parseFloat("{{ freeShippingPrice }}");
+              var free_shipping_price = parseFloat("{{ freeShippingPrice }}")/100;
               var total_price = parseFloat(cart.total_price/100 );
 
               console.log("free_shipping_price");
