--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -698,6 +698,9 @@
               console.log("free_shipping_price");
               console.log(free_shipping_price);
 
+              console.log("total_price");
+              console.log(total_price);
+
               if(total_price => free_shipping_price){
                 $('.shipping-bar-bg').css('background-color', '#f15523');
               }else{
