--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -690,7 +690,7 @@
       $(".product-form__submit").click(function() {
         setTimeout(function() {
           $.getJSON('/cart.js', function(cart) {
-              //console.log(cart);
+              console.log(cart);
 
               var free_shipping_price = parseFloat("{{ freeShippingPrice }}")/100;
               var total_price = parseFloat(cart.total_price/100 );
@@ -701,7 +701,7 @@
               console.log("total_price");
               console.log(total_price);
 
-              if(total_price => free_shipping_price){
+              if(total_price >= free_shipping_price){
                 $('.shipping-bar-bg').css('background-color', '#f15523');
               }else{
                 $('.shipping-bar-bg').removeAttr("style")
