--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -701,6 +701,8 @@
               console.log("total_price");
               console.log(total_price);
 
+              console.log(total_price + free_shipping_price);
+
               if(total_price >= free_shipping_price){
                 $('.shipping-bar-bg').css('background-color', '#f15523');
               }else{
