--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -704,8 +704,10 @@
               console.log(total_price + free_shipping_price);
 
               if(total_price >= free_shipping_price){
+                alert(">=");
                 $('.shipping-bar-bg').css('background-color', '#f15523');
               }else{
+                alert("<");
                 $('.shipping-bar-bg').removeAttr("style")
               }
               
