--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -704,10 +704,11 @@
               console.log(total_price + free_shipping_price);
 
               if(total_price >= free_shipping_price){
-                alert(">=");
+                
                 $('.shipping-bar-bg').css('background-color', '#f15523');
+                $('.shipping-tool').hide();
               }else{
-                alert("<");
+                
                 $('.shipping-bar-bg').removeAttr("style")
               }
               
