--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -688,6 +688,8 @@
   <script>
     $(document).ready(function() {
       $(".product-form__submit").click(function() {
+
+        /*
         setTimeout(function() {
           $.getJSON('/cart.js', function(cart) {
               console.log(cart);
@@ -714,6 +716,23 @@
               
            });
          }, 200);
+         */
+
+        $.ajax({
+          type: "GET",
+          url: "/cart.js",
+          cache: false,
+          })
+        .then(response => {
+          console.log("Ajax success!");
+          const result = JSON.parse(cart);
+          console.log(cart);
+
+        })
+        .catch(error => {
+           console.log("Ajax failed!");
+        });
+
       });
     });
   </script>
