--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -720,7 +720,7 @@
 
         $.ajax({
           type: 'GET',
-          url: '/cart.js',
+          url: '/cart.json',
           async: false,
           cache: false,
           dataType: 'json'
