--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -692,7 +692,12 @@
     
         setTimeout(function() {
           $.getJSON('/cart.js', function(cart) {
-            console.log(cart);
+              //console.log(cart);
+              console.log("processing...");
+           }).done(function( cart ) {
+              console.log("done");
+              console.log(cart);
+
               var free_shipping_price = parseFloat("{{ freeShippingPrice }}")/100;
               var total_price = parseFloat(cart.total_price/100 );
 
@@ -713,9 +718,6 @@
                 $('.shipping-bar-bg').removeAttr("style")
               }
               
-           }).done(function( cart ) {
-              console.log("done");
-              console.log(cart);
            });
          }, 200);
          
