--- a/sections/product-reviews.liquid
+++ b/sections/product-reviews.liquid
@@ -12,7 +12,7 @@
   }
 {%- endstyle -%}
 
-<div id="reviews" class="product-reviews page-width isolate section-{{ section.id }}-padding">
+<div id="more-reviews" class="product-reviews page-width isolate section-{{ section.id }}-padding">
   <div class="trustspot trustspot-main-widget"
       data-product-sku="{{ product.id }}" 
       data-name="{{ product.title | escape }}"
