--- a/sections/product-testimonials.liquid
+++ b/sections/product-testimonials.liquid
@@ -55,7 +55,7 @@
             {%- endif -%}
           {%- endfor -%} 
         </div>
-        <a href="#reviews" class="review-link" data-text="read more" type="button">
+        <a href="#more-reviews" class="review-link" data-text="read more" type="button">
           Read more reviews
         </a>
       </div>
