--- a/sections/product-reviews.liquid
+++ b/sections/product-reviews.liquid
@@ -12,8 +12,8 @@
   }
 {%- endstyle -%}
 
-<div id="more-reviews" class="product-reviews page-width isolate section-{{ section.id }}-padding">
-  <div class="trustspot trustspot-main-widget"
+<div class="product-reviews page-width isolate section-{{ section.id }}-padding">
+  <div id="more-reviews" class="trustspot trustspot-main-widget"
       data-product-sku="{{ product.id }}" 
       data-name="{{ product.title | escape }}"
       data-url="{{ shop.url }}{{ product.url }}"
