--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -260,7 +260,7 @@
               type="search"
               name="q"
               value=""
-              placeholder="{{ 'general.search.search' | t }}"
+              placeholder="Search products..."
               {%- if settings.predictive_search_enabled -%}
                 role="combobox"
                 aria-expanded="false"
