--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1104,3 +1104,15 @@ nav.header__inline-menu {
 .header__active-menu-item{
   text-decoration: none;
 }
+
+form.search .search__input.field__input::-webkit-input-placeholder { /* Edge */
+  color: red;
+}
+
+form.search .search__input.field__input:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: red;
+}
+
+form.search .search__input.field__input::placeholder {
+  color: red;
+}
