--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -274,7 +274,7 @@
                 spellcheck="false"
               {%- endif -%}
             >
-            {%- comment -%}<label class="field__label" for="Search-In-Modal">{{ 'general.search.search' | t }}</label>{%- endcomment -%}
+            <label class="field__label" for="Search-In-Modal">Search products...</label>
             <input type="hidden" name="options[prefix]" value="last">
             <svg class="icon icon-search" aria-hidden="true" focusable="false" role="presentation">
               <use href="#icon-search">
