--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -279,7 +279,7 @@
             <svg class="icon icon-search" aria-hidden="true" focusable="false" role="presentation">
               <use href="#icon-search">
             </svg>
-            <button class="search__button field__button" aria-label="{{ 'general.search.search' | t }}">
+            <button type="submit" class="search__button field__button" aria-label="{{ 'general.search.search' | t }}">
               {{ 'general.search.search' | t }}
             </button>
           </div>
