--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -615,6 +615,23 @@
   customElements.define('sticky-header', StickyHeader);
 {% endjavascript %}
 
+<script>
+  let items = document.querySelector(".header__inline-menu").querySelectorAll("details");
+  console.log(items)
+  items.forEach(item => {
+    item.addEventListener("mouseover", () => {
+      item.setAttribute("open", true);
+      item.querySelector("ul").addEventListener("mouseleave", () => {
+        item.removeAttribute("open");
+      });
+    item.addEventListener("mouseleave", () => {
+      item.removeAttribute("open");
+    });
+  });
+  
+  });
+</script>
+
 <script type="application/ld+json">
   {
     "@context": "http://schema.org",
