--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -748,11 +748,11 @@
                 console.log(">=");
                 $('.shipping-bar-bg').css('background-color', '#f15523');
                 $('.shipping-tool').hide();
-                $('.shipping-bar .text').text("You've got free shipping");
+                $('.shipping-bar .text').html("You've got free shipping");
               }else{
                 console.log("<");
                 $('.shipping-bar-bg').removeAttr("style")
-                $('.shipping-bar .text').("Add <b>$ <span class="left-shipping-price">{{ freeShippingPrice | minus: cart.total_price | money_without_currency }}</span></b> more to your cart for free shipping!");
+                $('.shipping-bar .text').html("Add <b>$ <span class="left-shipping-price">{{ freeShippingPrice | minus: cart.total_price | money_without_currency }}</span></b> more to your cart for free shipping!");
               }
               
            });
