--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1130,3 +1130,6 @@ form.search .field .field__label{
   font-size: 13px;  
   letter-spacing: 0.04rem;
 }
+form.search .field__input:hover{
+  box-shadow: 0 0 0 0.2em #fff;
+}
