--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -507,7 +507,7 @@
             render 'icon-cart'
           endif
         -%}
-        <span>{{ 'templates.cart.cart' | t }}</span>
+        <span>Bag</span>
         {%- if cart != empty -%}
           <div class="cart-count-bubble">
             {%- if cart.item_count < 100 -%}
