--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -507,7 +507,7 @@
             render 'icon-cart'
           endif
         -%}
-        <span>Bag</span>
+        <span>Bag&nbsp;</span>
 
           <div class="cart-count-bubble">
             {%- if cart.item_count < 100 -%}
