--- a/sections/cart-icon-bubble.liquid
+++ b/sections/cart-icon-bubble.liquid
@@ -7,6 +7,7 @@
 -%}
 <span class="visually-hidden">{{ 'templates.cart.cart' | t }}</span>
 {%- if cart != empty -%}
+  <span>Bag&nbsp;</span>
   <div class="cart-count-bubble">
       {%- if cart.item_count < 100 -%}
         <span aria-hidden="true">{{ cart.item_count }}</span>
