--- a/snippets/price.liquid
+++ b/snippets/price.liquid
@@ -50,7 +50,7 @@
     <div class="price__regular">
       <span class="visually-hidden visually-hidden--inline">{{ 'products.product.price.regular_price' | t }}</span>
       <span class="price-item price-item--regular">
-        {{ money_price }}
+        {{ money_price | strip }}
       </span>
     </div>
     <div class="price__sale">
