--- a/assets/custom.css
+++ b/assets/custom.css
@@ -943,7 +943,8 @@ color: #F05423;
 .section--product-recommendations .quick-add__submit {
   background-color: #fff;
   text-transform: uppercase;
-  font-weight: bold;
+  font-weight: 600;
+  font-size: 13px;
 }
 
 /* 
