PDP More fixes with mobile
PDP fixes including mobile issues

--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -128,7 +128,8 @@
                           required
                         >
                         <label class="field__label" for="NewsletterForm--{{ section.id }}">
-                          {{ 'newsletter.label' | t }}
+                          {%- comment -%}{{ 'newsletter.label' | t }}{%- endcomment -%}
+                          {{ 'Enter Your Email Address' }}
                         </label>
                         <button type="submit" class="newsletter-form__button field__button" name="commit" id="Subscribe" aria-label="{{ 'newsletter.button_label' | t }}">
                           {%- comment -%}{% render 'icon-arrow' %}{%- endcomment -%}
