--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -151,6 +151,7 @@
 .card__heading {
   margin-top: 0;
   margin-bottom: 0;
+  flex-grow: 1;
 }
 
 .card__heading:last-child {
@@ -247,6 +248,8 @@
 .card--standard > .card__content .card__information {
   padding-left: 0;
   padding-right: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .card--card.card--media .card__inner .card__information,
