--- a/sections/product-recommendations.liquid
+++ b/sections/product-recommendations.liquid
@@ -38,7 +38,7 @@
               show_vendor: section.settings.show_vendor,
               show_rating: section.settings.show_rating,
               show_quick_add: true,
-              normal_quick_add: true
+              normal_quick_add: false
             %}
           </li>
         {% endfor %}
