--- a/sections/product-reviews.liquid
+++ b/sections/product-reviews.liquid
@@ -1,7 +1,7 @@
 {%- style -%}
   .section-{{ section.id }}-padding {
     padding-top: 0;
-    padding-bottom: {{ section.settings.padding_bottom | times: 0.75 | round: 0 }}px;
+    padding-bottom: 0;
   }
 
   @media screen and (min-width: 750px) {
