--- a/assets/custom.css
+++ b/assets/custom.css
@@ -538,7 +538,7 @@ color: #F05423;
 }
 
 .section-head h5 {
-  color: #FFC7B6;
+  color: #F05423;
   font-size: 13px;
   font-weight: 700;
   margin-bottom: 0;
